# dish-android

./: .clang-format  .clang-tidy  .editorconfig  .git-commit-msg.txt  .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  FUTURE_RECOMMENDATIONS_PROMPT.md  HANDOFF.md  PRIVACY.md  README.md  RESPONSIVENESS_AND_POLISH_PROMPT.md  SCREENSHOTS_PROMPT.md  SECURITY.md  THIRD_PARTY.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: _security.yml  android-ci.yml  codeql.yml  play-listing.yml  play-reviews.yml  release.yml  security.yml  store-screenshots.yml
.security/: allowlist.yaml  dependency-check-suppressions.xml
app/: build.gradle.kts  detekt.yml  google-services.json.template  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/licenses/: licenses.json
app/src/main/cpp/: CMakeLists.txt  dispatch.h  gamepad_input.cpp  gamepad_input.h  hotpath_latency.cpp  hotpath_latency.h  satellite_jni.cpp  send_counter.h  thread_priority.h  usb_hid_descriptor.cpp  usb_hid_descriptor.h  usb_host.cpp  usb_host.h  usb_parsers.cpp  usb_parsers.h  wire_encoders.h
app/src/main/res/anim/: fade_through_enter.xml  fade_through_exit.xml
app/src/main/res/color/: binding_segment_text.xml  chip_dish_background.xml  chip_dish_text.xml  chip_pickable_text.xml  icon_interactive.xml  icon_secondary.xml  text_disabled.xml
app/src/main/res/drawable/: bg_add_controller_card.xml  bg_binding_callout.xml  bg_binding_pill_cap.xml  bg_binding_pill_fact.xml  bg_binding_pill_off.xml  bg_binding_pill_on.xml  bg_binding_pill_success.xml  bg_binding_pill_warn.xml  bg_binding_segment.xml  bg_binding_segmented.xml  bg_icon_container.xml  bg_pair_pin_field.xml  bg_pill.xml  bg_pulse_badge.xml  bg_pulse_dot.xml  bg_recommended_badge.xml  bg_recommended_pill.xml  bg_setup_callout_success.xml  bg_setup_callout_warning.xml  bg_setup_step_bar.xml  bg_step_indicator.xml  binding_gap_vertical.xml  binding_pill_gap.xml  binding_segment_divider.xml  chip_pickable_bg.xml  ctrl_playstation.xml  ctrl_xbox.xml  dot_circle.xml  ic_add.xml  ic_battery.xml  ic_battery_alert.xml  ic_battery_charging.xml  ic_battery_critical.xml  ic_battery_empty.xml  ic_battery_full.xml  ic_battery_high.xml  ic_battery_low.xml  ic_battery_mid.xml  ic_bluetooth.xml  ic_bluetooth_connected.xml  (+110 more)
app/src/main/res/interpolator/: battery_fill.xml  dish_ease_emphasized.xml  dish_ease_in.xml  dish_ease_linear.xml  dish_ease_out.xml  dish_ease_standard.xml
app/src/main/res/layout/: activity_bluetooth_gamepad.xml  activity_configure_bindings.xml  activity_connections.xml  activity_diagnostics.xml  activity_donate.xml  activity_gamepad_overlay.xml  activity_help.xml  activity_input_inspector.xml  activity_licenses.xml  activity_main.xml  activity_native_unavailable.xml  activity_settings.xml  activity_setup_bluetooth_controller.xml  activity_setup_bluetooth_host.xml  activity_setup_configure.xml  activity_setup_connection.xml  activity_setup_input.xml  activity_setup_usb.xml  activity_setup_wizard.xml  activity_touchpad_overlay.xml  activity_welcome.xml  binding_action_button_outlined.xml  binding_apply_step.xml  binding_decision_row.xml  binding_pill.xml  binding_section_binding.xml  binding_section_destination.xml  binding_section_input.xml  binding_value_mono.xml  binding_value_none.xml  binding_value_not_bound.xml  card_row_icon_label_value.xml  card_telemetry.xml  chip_pickable.xml  dashboard_hint_card.xml  diagnostics_body_row.xml  diagnostics_card.xml  diagnostics_empty_row.xml  diagnostics_inspect_button.xml  diagnostics_rtt_sparkline.xml  (+39 more)
app/src/main/res/layout-land/: activity_connections.xml
app/src/main/res/layout-sw600dp/: activity_connections.xml  activity_donate.xml  activity_help.xml  activity_main.xml  activity_settings.xml  activity_setup_wizard.xml  activity_welcome.xml
app/src/main/res/menu/: connections_menu.xml  menu_connections.xml  menu_gamepad_overlay.xml  menu_touchpad_overlay.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  colors_primitives.xml  colors_state.xml  dimens.xml  dimens_primitives.xml  elevations.xml  motion.xml  strings.xml  (+5 more)
app/src/main/res/values-bs/: strings.xml  strings_onboarding.xml  strings_setup.xml
app/src/main/res/values-de/: strings.xml  strings_onboarding.xml  strings_setup.xml
app/src/main/res/values-es/: strings.xml  strings_onboarding.xml  strings_setup.xml
app/src/main/res/values-fr/: strings.xml  strings_onboarding.xml  strings_setup.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-pt-rBR/: strings.xml  strings_onboarding.xml  strings_setup.xml
app/src/test/cpp/: CMakeLists.txt  gamepad_input_test.cpp  send_counter_test.cpp  usb_hid_descriptor_test.cpp  usb_parsers_test.cpp  wire_encoders_test.cpp
baselineprofile/: build.gradle.kts
docs/: DESIGN_SYSTEM.md  architecture.md  capability-followups.md  contract.md  design-system.md  rumble.md  usb-direct-mode-followups.md  wire-format.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
play/: CONTENT_RATING.md  DATA_SAFETY.md  PERMISSIONS_JUSTIFICATION.md  README.md  REVIEWER_NOTES.md  SCREENSHOT-STRATEGY.md
play/metadata/android/bs/: full_description.txt  short_description.txt  title.txt
play/metadata/android/de-DE/: full_description.txt  short_description.txt  title.txt
play/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
play/metadata/android/es-ES/: full_description.txt  short_description.txt  title.txt
play/metadata/android/fr-FR/: full_description.txt  short_description.txt  title.txt
play/metadata/android/pt-BR/: full_description.txt  short_description.txt  title.txt
scripts/: check-translations.py  check_play_metadata.py  ci_capture_screenshots.sh  ci_local.sh  crop_play_screenshots.py  play_reviews_digest.py  setup-hooks.sh
tools/: svg2vd.ps1
tools/bench/: README.md
(+501 files in other folders)
